stylus support for vim

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/bundle/handlebars"]
 	path = vim/bundle/handlebars
 	url = git://github.com/nono/vim-handlebars.git
+[submodule "vim/bundle/stylus-syntax"]
+	path = vim/bundle/stylus-syntax
+	url = https://github.com/wavded/vim-stylus.git
