--- a/.gitmodules
+++ b/.gitmodules
@@ -31,9 +31,21 @@
 [submodule "vim/bundle/emmet"]
 	path = vim/bundle/emmet
 	url = https://github.com/mattn/emmet-vim.git
-[submodule "vim/bundle/handlebars"]
-	path = vim/bundle/handlebars
-	url = git://github.com/nono/vim-handlebars.git
 [submodule "vim/bundle/stylus-syntax"]
 	path = vim/bundle/stylus-syntax
 	url = https://github.com/wavded/vim-stylus.git
+[submodule "vim/bundle/gitgutter"]
+	path = vim/bundle/gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
+[submodule "vim/bundle/mustache"]
+	path = vim/bundle/mustache
+	url = git://github.com/mustache/vim-mustache-handlebars.git
+[submodule "vim/bundle/airline"]
+	path = vim/bundle/airline
+	url = https://github.com/bling/vim-airline
+[submodule "vim/bundle/fugitive"]
+	path = vim/bundle/fugitive
+	url = git@github.com:tpope/vim-fugitive.git
+[submodule "vim/bundle/indent-guides"]
+	path = vim/bundle/indent-guides
+	url = git@github.com:nathanaelkane/vim-indent-guides.git
