--- a/.gitmodules
+++ b/.gitmodules
@@ -27,7 +27,7 @@
 	url = https://github.com/scrooloose/syntastic.git
 [submodule "vim/bundle/coffeescript"]
 	path = vim/bundle/coffeescript
-	url = https://github.com/kchmck/vim-coffee-script.git
+	url = git@github.com:tur-nr/vim-coffee-script.git
 [submodule "vim/bundle/emmet"]
 	path = vim/bundle/emmet
 	url = https://github.com/mattn/emmet-vim.git
