--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vim/bundle/dockerfile-syntax"]
 	path = vim/bundle/dockerfile-syntax
 	url = git@github.com:ekalinin/Dockerfile.vim.git
+[submodule "vim/bundle/vim-go"]
+	path = vim/bundle/vim-go
+	url = git@github.com:fatih/vim-go.git
