--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/bundle/vim-go"]
 	path = vim/bundle/vim-go
 	url = git@github.com:fatih/vim-go.git
+[submodule "vim/bundle/nerdtree-git"]
+	path = vim/bundle/nerdtree-git
+	url = git@github.com:Xuyuanp/nerdtree-git-plugin.git
